# apk-name-extractor

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
src/apk_name_extractor/: __main__.py  app.py  launcher.py
