[project]
name = "apk-name-extractor"
version = "0.1.0"
description = "Batch extract Android app names from APK files and export them to CSV."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
